[package]
name = "pesel"
version = "0.1.3"
authors = ["MaciekTalaska <maciek.talaska@gmail.com>"]
edition = "2018"
description = "PESEL validation & generation library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/MaciekTalaska/pesel"
keywords = ["parsing", "generator", "format", "algorithm"]
categories = ["data-structures", "parser-implementations"]

[badges]
appveyor = {repository = "MaciekTalaska/pesel", branch = "master", service = "github"}
travis-ci = {repository = "MaciekTalaska/pesel", branch = "master"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
chrono = "0.4.7"

[profile.release]
lto = true
opt-level = "z"
